--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,38 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Clothing Shop - Admin Portal</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    /* Loading indicator shown while Angular app bootstraps */
+    app-root:empty::before {
+      content: '';
+      display: block;
+      width: 50px;
+      height: 50px;
+      margin: 100px auto;
+      border: 4px solid #f3f4f6;
+      border-top-color: #3b82f6;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+    app-root:empty::after {
+      content: 'Loading...';
+      display: block;
+      text-align: center;
+      color: #6b7280;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      margin-top: 20px;
+    }
+  </style>
+</head>
 <body>
-<app-root></app-root>
+  <app-root></app-root>
 </body>
+</html>
